PyMaker/datas/object2/RawHTML/i701/Python_DOC_referPages.error-while-trying-to-run-a-discord-bot-python.txt
<div class="post-text" itemprop="text">
<pre><code>File "dban.py", line 1, in &lt;module&gt;
    import discord
  File "C:\Users\mabou\Desktop\Python\lib\site-packages\discord\__init__.py", line 20, in &lt;module&gt;
    from .client import Client, AppInfo, ChannelPermissions
  File "C:\Users\mabou\Desktop\Python\lib\site-packages\discord\client.py", line 38, in &lt;module&gt;
    from .state import ConnectionState
  File "C:\Users\mabou\Desktop\Python\lib\site-packages\discord\state.py", line 36, in &lt;module&gt;
    from . import utils, compat
  File "C:\Users\mabou\Desktop\Python\lib\site-packages\discord\compat.py", line 32
create_task = asyncio.async
                          ^
SyntaxError: invalid syntax
</code></pre>
<p>How do I fix these errors? </p>
</div>
<div class="post-text" itemprop="text">
<p>Found <a href="https://github.com/Rapptz/discord.py/issues/1396#issuecomment-414486638" rel="nofollow noreferrer">this comment</a> to <a href="https://github.com/Rapptz/discord.py/issues/1396" rel="nofollow noreferrer">this issue</a> on github.</p>
<blockquote>
<p>async and await are only reserved in 3.7 onwards. Renaming library
  files or folders is not a good idea as it both creates inconsistency
  in your install and may confuse pip or setuptools if you decide to
  upgrade those libraries.</p>
<p>It also doesn't help for this issue, where asyncio.async is used.
  Modifying asyncio in this way will damage your install and prevent
  discord.py, or really any async library, from operating correctly.</p>
<p>Use an older version or use the rewrite branch to fix these issues.</p>
</blockquote>
<p>I don't know what python version you're using for sure but I can assume you're using <code>Python 3.7</code> and <code>Dicsord.py master/async branch</code>. Either use <code>Python 3.6</code> or below, or download the <a href="https://github.com/Rapptz/discord.py/tree/rewrite" rel="nofollow noreferrer">re-write</a>.</p>
<p>If I remember correctly the <code>pip install</code> is:</p>
<pre><code>python3 -m pip install -U https://github.com/Rapptz/discord.py/archive/master.zip#egg=discord.py[voice]
</code></pre>
<p>You can also get quicker more relevant help on the <a href="https://discord.gg/r3sSKJJ" rel="nofollow noreferrer">discord.py server</a></p>
</div>
<span class="comment-copy">What version of python and discord.py are you running? This looks like a <code>discord.py v1.0</code> but for some reason it looks like you got a <code>python 3.7</code> verion and you're running something lower. This is erroring out due to the fact that <code>asyc</code> was added as a <a href="https://docs.python.org/3/whatsnew/3.7.html#changes-in-python-behavior" rel="nofollow noreferrer">reserved keyword</a></span>
